common-applications/test-environment/patchwork/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
  namespace: patchwork
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: patchwork
      component: patchwork
  template:
    metadata:
      labels:
        app: patchwork
        component: patchwork
    spec:
      imagePullSecrets:
      - name: huawei-swr-image-pull-secret
      nodeSelector:
        autoscaler: "true"
      containers:
        - name: patchwork
          image: swr.cn-north-4.myhuaweicloud.com/opensourceway/patchwork/patchwork:main-f3d54a3
          volumeMounts:
            - mountPath: /home/patches
              name: patchwork-file-volume
            - mountPath: /home/patchwork/patchwork/config.yaml
              name: patchwork-configmap
              subPath: config.yaml
          resources:
            requests:
              cpu: 2000m
              memory: 2000Mi
            limits:
              cpu: 3000m
              memory: 3000Mi
          command:
            - /bin/sh
            - -c
            - |
              python manage.py makemigrations
              python manage.py migrate
              python manage.py loaddata default_tags default_states
              python manage.py collectstatic
              python manage.py runserver 0.0.0.0:8000
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
              name: http
              protocol: TCP
          readinessProbe:              #就绪探针
            initialDelaySeconds: 20    #延迟加载时间
            periodSeconds: 5           #重试时间间隔
            timeoutSeconds: 10         #超时时间设置
            failureThreshold: 5        #探测失败的重试次数
            tcpSocket:
              port: 8000
          livenessProbe:               #存活探针
            initialDelaySeconds: 60    #延迟加载时间
            periodSeconds: 5           #重试时间间隔
            timeoutSeconds: 5          #超时时间设置
            failureThreshold: 3        #探测失败的重试次数
            tcpSocket:
              port: 8000
      volumes:
        - name: patchwork-file-volume
          persistentVolumeClaim:
            claimName: patchwork-file-data
        - configMap:
            defaultMode: 420
            name: patchwork-configmap
          name: patchwork-configmap
